--- a/notebooks/library_design.ipynb
+++ b/notebooks/library_design.ipynb
@@ -78,17 +78,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9715fb17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# guide_input_df['spacer1_check']= guide_input_df['sgRNA Sequence'].apply(check_spacer_1)\n",
-    "# guide_input_df['spacer2_check']= guide_input_df['sgRNA Sequence'].apply(check_spacer_2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "711899cf",
    "metadata": {},
@@ -125,7 +114,7 @@
     }
    ],
    "source": [
-    "guide_pairs_df = pair_guides_single_target_CRISPick(guide_input_df)\n",
+    "guide_pairs_df = pair_guides_single_target_CRISPick(guide_input_df, constructs_per_gene=3)\n",
     "\n",
     "plt.figure(figsize=(3,3))\n",
     "guide_pairs_df.value_counts('target').hist(bins=range(0,10))\n",
@@ -1108,7 +1097,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
