--- a/notebooks/library_design.ipynb
+++ b/notebooks/library_design.ipynb
@@ -403,7 +403,7 @@
     "    iBAR_pairs = complete_iBARs_v1(df_barcodes, n_guide_pairs)\n",
     "    \n",
     "    if iBAR_pairs is None:\n",
-    "        selected_bc_file = selected_bc_file[selected_bc_file.index != selected_bc_file]\n",
+    "        df_bc_sets_subset = df_bc_sets_subset[df_bc_sets_subset.index != selected_bc_file]\n",
     "        print('\\nTrying again with next smallest barcode set.\\n')\n",
     "    if len(selected_bc_file)==0:\n",
     "        print('ran out of barcode files')"
