--- a/notebooks/library_design.ipynb
+++ b/notebooks/library_design.ipynb
@@ -405,7 +405,7 @@
     "    if iBAR_pairs is None:\n",
     "        df_bc_sets_subset = df_bc_sets_subset[df_bc_sets_subset.index != selected_bc_file]\n",
     "        print('\\nTrying again with next smallest barcode set.\\n')\n",
-    "    if len(selected_bc_file)==0:\n",
+    "    if len(df_bc_sets_subset)==0:\n",
     "        print('ran out of barcode files')"
    ]
   },
