updates to code and notebooks for more transparency in oligo design and library QC failure modes

--- a/notebooks/library_design.ipynb
+++ b/notebooks/library_design.ipynb
@@ -79,17 +79,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9715fb17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# guide_input_df['spacer1_check']= guide_input_df['sgRNA Sequence'].apply(check_spacer_1)\n",
-    "# guide_input_df['spacer2_check']= guide_input_df['sgRNA Sequence'].apply(check_spacer_2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "711899cf",
    "metadata": {},
    "outputs": [
@@ -125,7 +114,7 @@
     }
    ],
    "source": [
-    "guide_pairs_df = pair_guides_single_target_CRISPick(guide_input_df)\n",
+    "guide_pairs_df = pair_guides_single_target_CRISPick(guide_input_df, constructs_per_gene=3)\n",
     "\n",
     "plt.figure(figsize=(3,3))\n",
     "guide_pairs_df.value_counts('target').hist(bins=range(0,10))\n",
@@ -414,9 +403,9 @@
     "    iBAR_pairs = complete_iBARs_v1(df_barcodes, n_guide_pairs)\n",
     "    \n",
     "    if iBAR_pairs is None:\n",
-    "        selected_bc_file = selected_bc_file[selected_bc_file.index != selected_bc_file]\n",
+    "        df_bc_sets_subset = df_bc_sets_subset[df_bc_sets_subset.index != selected_bc_file]\n",
     "        print('\\nTrying again with next smallest barcode set.\\n')\n",
-    "    if len(selected_bc_file)==0:\n",
+    "    if len(df_bc_sets_subset)==0:\n",
     "        print('ran out of barcode files')"
    ]
   },
@@ -1108,7 +1097,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
