refactor code and improve control guide selection

--- a/notebooks/combinatorial_library_design.ipynb
+++ b/notebooks/combinatorial_library_design.ipynb
@@ -30,7 +30,7 @@
     "# provide the path to your local installation of the CROPseq-multi package\n",
     "CSM_dir = '/'.join(os.getcwd().split('/')[:-1])\n",
     "os.chdir(CSM_dir)\n",
-    "sys.path.append(CSM_dir+'/code')\n",
+    "sys.path.append(CSM_dir+'/csm')\n",
     "\n",
     "import guide_selection, barcode_selection, oligo_design"
    ]
@@ -2967,7 +2967,12 @@
    "id": "7ed4da48",
    "metadata": {},
    "source": [
-    "# 5. generate oligos"
+    "# 5. generate oligos\n",
+    "\n",
+    "- successful oligo designs will populate the 'oligo' column in oligo_design_df\n",
+    "- if any oligos were not successfully built, those rows will be returned in 'df_failed' for inspesction\n",
+    "  - if all oligos were successfully built, 'df_failed' will be an empty dataframe\n",
+    "- tRNAs may be substituted at this step to remove incompatible sequences."
    ]
   },
   {
@@ -2977,6 +2982,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# inspect any designs for which oligos could not be built\n",
+    "# (empty dataframe if there were no failures)\n",
     "oligo_design_df, df_failed = oligo_design.generate_oligos(library_design_df)"
    ]
   },
@@ -3522,6 +3529,7 @@
     }
    ],
    "source": [
+    "# successful designs\n",
     "oligo_design_df"
    ]
   },
@@ -3573,8 +3581,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# oligo_design_df.to_csv('oligo_designs/CSM_library_design.%s.csv'%(time.strftime(\"%Y%m%d-%H%M%S\")))\n",
-    "# oligo_design_df['oligo'].to_csv('oligo_designs/CSM_oligo_order.%s.csv'%(time.strftime(\"%Y%m%d-%H%M%S\")))"
+    "# oligo_design_df.to_csv('oligo_designs/CSM_library_design.%s.csv'%(time.strftime(\"%Y%m%d-%H%M%S\")),index=False)\n",
+    "# oligo_design_df['oligo'].to_csv('oligo_designs/CSM_oligo_order.%s.csv'%(time.strftime(\"%Y%m%d-%H%M%S\")),index=False)"
    ]
   }
  ],
