--- a/notebooks/library_NGS_analysis.ipynb
+++ b/notebooks/library_NGS_analysis.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "CSM_dir = '/'.join(os.getcwd().split('/')[:-1])\n",
     "os.chdir(CSM_dir)\n",
-    "sys.path.append(CSM_dir+'/code')"
+    "sys.path.append(CSM_dir+'/csm')"
    ]
   },
   {
