changed example guide input for single-target

--- a/notebooks/single_guide_library_design.ipynb
+++ b/notebooks/single_guide_library_design.ipynb
@@ -5,13 +5,13 @@
    "id": "8aaf2daa",
    "metadata": {},
    "source": [
-    "## NOTE: this notebook is used to design single-guide libraries to for CROPseq-multi, not dual-guide libraries!\n",
+    "## NOTE: This notebook provides an example for the design of *single-guide* libraries in CROPseq-multi, not dual-guide libraries!\n",
     "\n",
-    "This is a non-standard use of CROPseq-multi, analagous to the usage of a standard CROPseq vector (with some added functionalities for iBARs and in situ detection performance).\n",
+    "This is a non-standard use of CROPseq-multi! **For most applications, including single-gene targeting and combinatorial libraries, we strongly recommend using dual-guide constructs for superior screening performance.** For examples of dual-guide designs, please see the appropriate jupyter notebooks in this repository.\n",
     "\n",
-    "**For most applications, including single-gene targeting and combinatorial libraries, dual-guide constructs are preferred.** However, some applications, such as base editor tiling screens, single-guide designs may be more appropriate.\n",
+    "In special cases when the screener wants only a single guide per construct, CROPseq-multi can be used analagously to a standard CROPseq vector, with some additional functionalities that may be useful, including iBARs and barcode detection features. Note that these designs will require alterations to the molecular cloning, sequencing, and CRISPR screening protocols that have been developed for dual-guide constructs.\n",
     "\n",
-    "Note that these designs will require alterations to the molecular cloning, sequencing, and CRISPR screening protocols that have been developed for dual-guide constructs."
+    "Until ourselves and others have more fully developed these protocols, this approach is **not yet recommended for general use.**"
    ]
   },
   {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "6abc0643-99a5-4073-a636-4d3da1f13013",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
        "[874 rows x 10 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "76924f06-353d-4b85-a455-e886addab937",
    "metadata": {},
    "outputs": [
@@ -330,8 +330,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/rwalton/Documents/CROPseq-multi/csm/guide_selection.py:562: UserWarning: Pick Order column not found in input df. No prioritization will be used.\n",
-      "  df_target = GI_input_df.copy()\n"
+      "/Users/rwalton/Documents/CROPseq-multi/csm/guide_selection.py:560: UserWarning: Pick Order column not found in input df. No prioritization will be used.\n",
+      "  warnings.warn('Pick Order column not found in input df. No prioritization will be used.')\n"
      ]
     },
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "f1b8fe86",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "designed_barcode_sets/barcodes_n10_k2_Levenshte...  Levenshtein    178183.0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "871c3e4b-fed7-4a26-b217-6e40c9ccb1ef",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3054/3054 [00:00<00:00, 7127.44it/s]"
+      "100%|██████████| 3054/3054 [00:00<00:00, 6142.68it/s]"
      ]
     },
     {
@@ -631,7 +631,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>ATTCACTGGTAC</td>\n",
+       "      <td>AAATACGAGAAG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -640,7 +640,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CGTCAGTTTGTT</td>\n",
+       "      <td>TCAACGCGGCTT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -649,7 +649,7 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>ATGCATGTATCT</td>\n",
+       "      <td>TGCATGCGCCAC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -658,7 +658,7 @@
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CAACTTAAGAAG</td>\n",
+       "      <td>ATTGTGATGCTA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -667,7 +667,7 @@
        "      <td>0</td>\n",
        "      <td>5</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CCCTCTCATGTA</td>\n",
+       "      <td>CACAAGTCAAAT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -685,7 +685,7 @@
        "      <td>0</td>\n",
        "      <td>7</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>GATGTTGTTGCG</td>\n",
+       "      <td>CACCTCTTGACT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>870</th>\n",
@@ -694,7 +694,7 @@
        "      <td>0</td>\n",
        "      <td>8</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>GTTGAAAGAGAC</td>\n",
+       "      <td>CTCTAAATGTGT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>871</th>\n",
@@ -703,7 +703,7 @@
        "      <td>0</td>\n",
        "      <td>9</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CGGATCCAAGCC</td>\n",
+       "      <td>GAGCCTTAGAGC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>872</th>\n",
@@ -712,7 +712,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CCAACTAGGACA</td>\n",
+       "      <td>ATTTGACCCAGG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>873</th>\n",
@@ -721,7 +721,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CTTCCTGTCTGA</td>\n",
+       "      <td>TCCAATTAGCCG</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -743,22 +743,22 @@
        "873    TFRC  GAATACCTCTAGCCATTCAG           0               1  GENE_TARGETING   \n",
        "\n",
        "             iBAR  \n",
-       "0    ATTCACTGGTAC  \n",
-       "1    CGTCAGTTTGTT  \n",
-       "2    ATGCATGTATCT  \n",
-       "3    CAACTTAAGAAG  \n",
-       "4    CCCTCTCATGTA  \n",
+       "0    AAATACGAGAAG  \n",
+       "1    TCAACGCGGCTT  \n",
+       "2    TGCATGCGCCAC  \n",
+       "3    ATTGTGATGCTA  \n",
+       "4    CACAAGTCAAAT  \n",
        "..            ...  \n",
-       "869  GATGTTGTTGCG  \n",
-       "870  GTTGAAAGAGAC  \n",
-       "871  CGGATCCAAGCC  \n",
-       "872  CCAACTAGGACA  \n",
-       "873  CTTCCTGTCTGA  \n",
+       "869  CACCTCTTGACT  \n",
+       "870  CTCTAAATGTGT  \n",
+       "871  GAGCCTTAGAGC  \n",
+       "872  ATTTGACCCAGG  \n",
+       "873  TCCAATTAGCCG  \n",
        "\n",
        "[874 rows x 6 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "id": "23e11cba-d679-4d7d-a306-74327416cb41",
    "metadata": {},
    "outputs": [],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "id": "f976c382-7b0c-451f-8d8b-95793b294787",
    "metadata": {},
    "outputs": [
@@ -833,7 +833,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "id": "a30e149a-f119-4a6a-b423-cc3c900a55ab",
    "metadata": {},
    "outputs": [
@@ -892,7 +892,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>ATTCACTGGTAC</td>\n",
+       "      <td>AAATACGAGAAG</td>\n",
        "      <td>0</td>\n",
        "      <td>CCGGCCAACATACC</td>\n",
        "      <td>CTCGTTCCTTTCGA</td>\n",
@@ -906,7 +906,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CGTCAGTTTGTT</td>\n",
+       "      <td>TCAACGCGGCTT</td>\n",
        "      <td>0</td>\n",
        "      <td>CCGGCCAACATACC</td>\n",
        "      <td>CTCGTTCCTTTCGA</td>\n",
@@ -920,7 +920,7 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>ATGCATGTATCT</td>\n",
+       "      <td>TGCATGCGCCAC</td>\n",
        "      <td>0</td>\n",
        "      <td>CCGGCCAACATACC</td>\n",
        "      <td>CTCGTTCCTTTCGA</td>\n",
@@ -934,7 +934,7 @@
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CAACTTAAGAAG</td>\n",
+       "      <td>ATTGTGATGCTA</td>\n",
        "      <td>0</td>\n",
        "      <td>CCGGCCAACATACC</td>\n",
        "      <td>CTCGTTCCTTTCGA</td>\n",
@@ -948,7 +948,7 @@
        "      <td>0</td>\n",
        "      <td>5</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CCCTCTCATGTA</td>\n",
+       "      <td>CACAAGTCAAAT</td>\n",
        "      <td>0</td>\n",
        "      <td>CCGGCCAACATACC</td>\n",
        "      <td>CTCGTTCCTTTCGA</td>\n",
@@ -976,7 +976,7 @@
        "      <td>0</td>\n",
        "      <td>7</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>GATGTTGTTGCG</td>\n",
+       "      <td>CACCTCTTGACT</td>\n",
        "      <td>0</td>\n",
        "      <td>CCGGCCAACATACC</td>\n",
        "      <td>CTCGTTCCTTTCGA</td>\n",
@@ -990,7 +990,7 @@
        "      <td>0</td>\n",
        "      <td>8</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>GTTGAAAGAGAC</td>\n",
+       "      <td>CTCTAAATGTGT</td>\n",
        "      <td>0</td>\n",
        "      <td>CCGGCCAACATACC</td>\n",
        "      <td>CTCGTTCCTTTCGA</td>\n",
@@ -1004,7 +1004,7 @@
        "      <td>0</td>\n",
        "      <td>9</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CGGATCCAAGCC</td>\n",
+       "      <td>GAGCCTTAGAGC</td>\n",
        "      <td>0</td>\n",
        "      <td>CCGGCCAACATACC</td>\n",
        "      <td>CTCGTTCCTTTCGA</td>\n",
@@ -1018,7 +1018,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CCAACTAGGACA</td>\n",
+       "      <td>ATTTGACCCAGG</td>\n",
        "      <td>0</td>\n",
        "      <td>CCGGCCAACATACC</td>\n",
        "      <td>CTCGTTCCTTTCGA</td>\n",
@@ -1032,7 +1032,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>GENE_TARGETING</td>\n",
-       "      <td>CTTCCTGTCTGA</td>\n",
+       "      <td>TCCAATTAGCCG</td>\n",
        "      <td>0</td>\n",
        "      <td>CCGGCCAACATACC</td>\n",
        "      <td>CTCGTTCCTTTCGA</td>\n",
@@ -1059,17 +1059,17 @@
        "873    TFRC  GAATACCTCTAGCCATTCAG           0               1  GENE_TARGETING   \n",
        "\n",
        "             iBAR  dialout     dialout_fwd     dialout_rev  \\\n",
-       "0    ATTCACTGGTAC        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
-       "1    CGTCAGTTTGTT        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
-       "2    ATGCATGTATCT        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
-       "3    CAACTTAAGAAG        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
-       "4    CCCTCTCATGTA        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
+       "0    AAATACGAGAAG        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
+       "1    TCAACGCGGCTT        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
+       "2    TGCATGCGCCAC        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
+       "3    ATTGTGATGCTA        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
+       "4    CACAAGTCAAAT        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
        "..            ...      ...             ...             ...   \n",
-       "869  GATGTTGTTGCG        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
-       "870  GTTGAAAGAGAC        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
-       "871  CGGATCCAAGCC        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
-       "872  CCAACTAGGACA        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
-       "873  CTTCCTGTCTGA        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
+       "869  CACCTCTTGACT        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
+       "870  CTCTAAATGTGT        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
+       "871  GAGCCTTAGAGC        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
+       "872  ATTTGACCCAGG        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
+       "873  TCCAATTAGCCG        0  CCGGCCAACATACC  CTCGTTCCTTTCGA   \n",
        "\n",
        "                                                 oligo  oligo_len  \n",
        "0    CCGGCCAACATACCCGTCTCAATGCAAAACAGAGGCCGCATGCTGG...        102  \n",
@@ -1087,7 +1087,7 @@
        "[874 rows x 11 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "id": "2ba6a111",
    "metadata": {},
    "outputs": [
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "443187a4",
    "metadata": {},
    "outputs": [],
