--- a/notebooks/combinatorial_library_design.ipynb
+++ b/notebooks/combinatorial_library_design.ipynb
@@ -3576,19 +3576,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "443187a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# oligo_design_df.to_csv('oligo_designs/CSM_library_design.%s.csv'%(time.strftime(\"%Y%m%d-%H%M%S\")),index=False)\n",
-    "# oligo_design_df['oligo'].to_csv('oligo_designs/CSM_oligo_order.%s.csv'%(time.strftime(\"%Y%m%d-%H%M%S\")),index=False)"
+    "# oligo_design_df['oligo'].to_csv('oligo_designs/CSM_oligo_order.%s.csv'%(time.strftime(\"%Y%m%d-%H%M%S\")))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CSM",
+   "display_name": "csm",
    "language": "python",
    "name": "python3"
   },
@@ -3602,7 +3602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
