--- a/notebooks/single_target_library_design.ipynb
+++ b/notebooks/single_target_library_design.ipynb
@@ -2558,13 +2558,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "443187a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# oligo_design_df.to_csv('oligo_designs/CSM_library_design.%s.csv'%(time.strftime(\"%Y%m%d-%H%M%S\")),index=False)\n",
-    "# oligo_design_df['oligo'].to_csv('oligo_designs/CSM_oligo_order.%s.csv'%(time.strftime(\"%Y%m%d-%H%M%S\")),index=False)"
+    "# oligo_design_df['oligo'].to_csv('oligo_designs/CSM_oligo_order.%s.csv'%(time.strftime(\"%Y%m%d-%H%M%S\")))"
    ]
   }
  ],
