simplified workflows for construct design

--- a/notebooks/single_target_library_design_simplified.ipynb
+++ b/notebooks/single_target_library_design_simplified.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ecb5f07c",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
     "# provide the path to the CRISPick output with your designed guides\n",
     "CRISPICK_DESIGN_FILE_PATH = 'input_files/CRISPick_output_single_target_example.txt'\n",
     "\n",
-    "# indicate the desired number of constructs per gene (must provide 2 * N_CONSTRUCTS_PER_GENE unique guides per gene)\n",
+    "# indicate the desired number of constructs per gene (must provide at least 2 * N_CONSTRUCTS_PER_GENE unique guides per gene)\n",
     "N_CONSTRUCTS_PER_GENE = 2\n",
     "\n",
     "# indicate the CRISPR modality (determines which control guides to use)\n",
